# mcp-korean-stock

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-macmini.yml
deploy/: render_launchd.sh  run_server.sh
deploy/launchd/: com.ctk03272.mcp-korean-stock.plist
src/korean_stock_mcp/: __init__.py  cache.py  errors.py  server.py
src/korean_stock_mcp/models/: __init__.py  market_data.py
src/korean_stock_mcp/providers/: __init__.py  fdr_provider.py  naver_intraday_provider.py
src/korean_stock_mcp/services/: __init__.py  indicator_service.py  market_data_service.py  symbol_resolver.py
src/korean_stock_mcp/tools/: registry.py
src/korean_stock_mcp/transports/: __init__.py  http_sse.py  stdio.py
tests/: test_indicator_service.py  test_market_data_service.py  test_naver_intraday_provider.py
