[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-stock-mcp"
version = "0.1.0"
description = "MCP server for Korean stocks using FinanceDataReader and Naver intraday charts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cachetools>=5.3.0",
  "FinanceDataReader>=0.9.96",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
korean-stock-mcp = "korean_stock_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
